fix() homepage text

--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
       <section>
         <h2>Start up project</h2>
         <p>
-          This is where the description and link of my start up project will go.
+          This is where the description and link to my start up project will go.
         </p>
       </section>
       <section>
         <h2>Simon project</h2>
         <p>
-          This is where the description and link of my implementation of the
-          Simon project will go.
+          This is where the description and link to my implementation of the
+          Simon will go.
         </p>
       </section>
       <section>
