--- a/index.html
+++ b/index.html
@@ -6,46 +6,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- This is a placeholder for when you start using CSS -->
     <link rel="stylesheet" href="index.css" />
-    <title>Template</title>
+    <title>OneGlobe</title>
   </head>
   <body>
     <header>
-      <h1>Your name</h1>
-      <img src="profile.png" alt="me" />
+      <h1>Myles Barney</h1>
+      <img src="profile.JPG" alt="me" />
     </header>
     <main>
       <section>
         <h2>About me</h2>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum.
+          Hi! My name is Myles Barney and I am excited that you are here!  I am a student at BYU studying 
+		  computer science and global business.  My dream is to leave a lasting impact on the world through
+		  innovative new technology and software.  My current project is OneGlobe, a social media platform
+		  focused on creating meanginful interactions between people from different cultures, different countries,
+		  and different mindsets, all over the world! 
         </p>
         <p>
-          Cursus sit amet dictum sit amet justo donec enim. Volutpat blandit
-          aliquam etiam erat velit scelerisque. Vestibulum lorem sed risus
-          ultricies tristique nulla. Amet mattis vulputate enim nulla aliquet
-          porttitor. Tellus integer feugiat scelerisque varius morbi. Et tortor
-          at risus viverra adipiscing at in. Pellentesque habitant morbi
-          tristique senectus et. Donec ac odio tempor orci. At ultrices mi
-          tempus imperdiet nulla malesuada. Pellentesque pulvinar pellentesque
-          habitant morbi tristique senectus. Libero justo laoreet sit amet
-          cursus sit amet. Aliquet lectus proin nibh nisl condimentum. Sit amet
-          massa vitae tortor condimentum lacinia quis vel.
+          I had the opportunity to live in Taiwan for two years as a missionary for my church. During
+		  that time I grew to love the people of Taiwan and made many lasting friendships that continue to
+		  make a difference in my life. I hope that through OneGlobe others will have the same opportunity to
+		  reach out and discover the complex lives of people all over the world!  
         </p>
         <p>
-          Personalize this page to what you would like. This is your chance to
-          experiment and show off how awesome you are.
+          Only by knowing others can we truly come to know ourselves.
         </p>
       </section>
       <section>
-        <h2>Start up project</h2>
+        <h2>OneGlobe</h2>
         <p>
-          This is where the description and link to my start up project will go.
+          OneGlobe is a mechanism for real social change all over the world.
         </p>
       </section>
       <section>
@@ -57,23 +48,22 @@
       </section>
       <section>
         <h2>Web programming assignments</h2>
-        <p>Replace the links below with your CodePen links.</p>
         <h3>HTML</h3>
         <ul>
           <li>
-            <a href="https://codepen.io/leesjensen/pen/abKYRqN">Introduction</a>
+            <a href="https://codepen.io/myl15/pen/qByYGaX">Introduction</a>
             - Basic HTML page example
           </li>
           <li>
-            <a href="https://codepen.io/leesjensen/pen/GRGBqbw">Structure</a> -
+            <a href="https://codepen.io/myl15/pen/LYBMOqy">Structure</a> -
             All the elements for creating page structure
           </li>
           <li>
-            <a href="https://codepen.io/leesjensen/pen/dyVdNej">Input</a> - All
+            <a href="https://codepen.io/myl15/pen/abjxyaZ">Input</a> - All
             the elements for receiving user input
           </li>
           <li>
-            <a href="https://codepen.io/leesjensen/pen/OJEwgBa">Media</a> - All
+            <a href="https://codepen.io/myl15/pen/GRBLEPN">Media</a> - All
             the elements for rendering media objects
           </li>
         </ul>
