filled that boi up

--- a/index.html
+++ b/index.html
@@ -17,20 +17,11 @@
       <section>
         <h2>About me</h2>
         <p>
-          Hi i'm abby delorey! i'm currently a freshman and byu and i'm pretty sure im going 
+         Hi i'm abby delorey! i'm currently a freshman and byu and i'm pretty sure im going to be a cs major lol 
         </p>
         <p>
-          Cursus sit amet dictum sit amet justo donec enim. Volutpat blandit
-          aliquam etiam erat velit scelerisque. Vestibulum lorem sed risus
-          ultricies tristique nulla. Amet mattis vulputate enim nulla aliquet
-          porttitor. Tellus integer feugiat scelerisque varius morbi. Et tortor
-          at risus viverra adipiscing at in. Pellentesque habitant morbi
-          tristique senectus et. Donec ac odio tempor orci. At ultrices mi
-          tempus imperdiet nulla malesuada. Pellentesque pulvinar pellentesque
-          habitant morbi tristique senectus. Libero justo laoreet sit amet
-          cursus sit amet. Aliquet lectus proin nibh nisl condimentum. Sit amet
-          massa vitae tortor condimentum lacinia quis vel.
-        </p>
+        my favorite things include: dancing, napping, and pangolins. 
+        I dislike: crumbs, long hw assignments, and babies crying. 
         <p>
           Personalize this page to what you would like. This is your chance to
           experiment and show off how awesome you are.
@@ -39,7 +30,7 @@
       <section>
         <h2>Start up project</h2>
         <p>
-          This is where the description and link to my start up project will go.
+          Rate my starbucks allows users to rate starbucks in their area to see which ones are the highest quality. link to website: https://ratemystarbucks.link/
         </p>
       </section>
       <section>
@@ -55,19 +46,19 @@
         <h3>HTML</h3>
         <ul>
           <li>
-            <a href="https://codepen.io/leesjensen/pen/abKYRqN">Introduction</a>
+            <a href="https://codepen.io/abbydelorey/pen/XWBOaZp">Introduction</a>
             - Basic HTML page example
           </li>
           <li>
-            <a href="https://codepen.io/leesjensen/pen/GRGBqbw">Structure</a> -
+            <a href="https://codepen.io/abbydelorey/pen/GRBzQRa">Structure</a> -
             All the elements for creating page structure
           </li>
           <li>
-            <a href="https://codepen.io/leesjensen/pen/dyVdNej">Input</a> - All
+            <a href="https://codepen.io/abbydelorey/pen/MWBLQvE">Input</a> - All
             the elements for receiving user input
           </li>
           <li>
-            <a href="https://codepen.io/leesjensen/pen/OJEwgBa">Media</a> - All
+            <a href="https://codepen.io/abbydelorey/pen/rNrPJpd">Media</a> - All
             the elements for rendering media objects
           </li>
         </ul>
