--- a/index.html
+++ b/index.html
@@ -10,36 +10,23 @@
   </head>
   <body>
     <header>
-      <h1>Your name</h1>
+      <h1>Treehouse Talks</h1>
       <img src="profile.png" alt="me" />
     </header>
     <main>
       <section>
-        <h2>About me</h2>
+        <h2>About us!</h2>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum.
+          Treehouse is a community driven experience focuse on giving the community a platform to speak.
+          We feature a variety of topics, such as entreprenuerism, failure, travel, mental health, pride, etc.
+          We focus mainly on providing a safe space for everyone to come and learn new ideas, become more aware,
+          and connect with peers. Want to get involved? Contact us!
         </p>
+        <button type="button" onclick="alert('This will redirect to a page')"> Contact us! </button>
+        <br>
         <p>
-          Cursus sit amet dictum sit amet justo donec enim. Volutpat blandit
-          aliquam etiam erat velit scelerisque. Vestibulum lorem sed risus
-          ultricies tristique nulla. Amet mattis vulputate enim nulla aliquet
-          porttitor. Tellus integer feugiat scelerisque varius morbi. Et tortor
-          at risus viverra adipiscing at in. Pellentesque habitant morbi
-          tristique senectus et. Donec ac odio tempor orci. At ultrices mi
-          tempus imperdiet nulla malesuada. Pellentesque pulvinar pellentesque
-          habitant morbi tristique senectus. Libero justo laoreet sit amet
-          cursus sit amet. Aliquet lectus proin nibh nisl condimentum. Sit amet
-          massa vitae tortor condimentum lacinia quis vel.
-        </p>
-        <p>
-          Personalize this page to what you would like. This is your chance to
-          experiment and show off how awesome you are.
+          My name is Teagan Smith, and everything changed when the fire nation attacked.
+          Although I have much to learn, I believe that I can (maybe) change the world.
         </p>
       </section>
       <section>
