Updates to Hyperlink and Placement of text

--- a/index.html
+++ b/index.html
@@ -10,30 +10,27 @@
   </head>
   <body>
     <header>
-      <h1>Treehouse Talks</h1>
+      <h1>Teagan Smith</h1>
       <img src="profile.png" alt="me" />
     </header>
     <main>
       <section>
-        <h2>About us!</h2>
+        <h2>About me!</h2>
         <p>
-          Treehouse is a community driven experience focuse on giving the community a platform to speak.
-          We feature a variety of topics, such as entreprenuerism, failure, travel, mental health, pride, etc.
-          We focus mainly on providing a safe space for everyone to come and learn new ideas, become more aware,
-          and connect with peers. Want to get involved? Contact us!
-        </p>
-        <button type="button" onclick="alert('This will redirect to a page')"> Contact us! </button>
-        <br>
-        <p>
-          My name is Teagan Smith, and everything changed when the fire nation attacked.
+          My name is <b>Teagan Smith</b>, and everything changed when the fire nation attacked.
           Although I have much to learn, I believe that I can (maybe) change the world.
         </p>
       </section>
       <section>
-        <h2>Start up project</h2>
+        <h2>Treehouse Talks</h2>
         <p>
-          This is where the description and link to my start up project will go.
+          Treehouse is a community driven experience focused on giving the community a platform to speak.
+          We feature a variety of topics, such as entreprenuerism, failure, travel, mental health, pride, etc.
+          We focus mainly on providing a safe space for everyone to come and learn new ideas, become more aware,
+          and connect with peers. Want to get involved? Contact us!
         </p>
+        <button type="button" onclick="alert('This will redirect to a page or a form eventually')"> Contact us! </button>
+        <br>
       </section>
       <section>
         <h2>Simon project</h2>
@@ -48,19 +45,19 @@
         <h3>HTML</h3>
         <ul>
           <li>
-            <a href="https://codepen.io/leesjensen/pen/abKYRqN">Introduction</a>
+            <a href="https://codepen.io/Tweagan11/pen/NWBmbxQ">Introduction</a>
             - Basic HTML page example
           </li>
           <li>
-            <a href="https://codepen.io/leesjensen/pen/GRGBqbw">Structure</a> -
+            <a href="https://codepen.io/Tweagan11/pen/poZBNLE">Structure</a> -
             All the elements for creating page structure
           </li>
           <li>
-            <a href="https://codepen.io/leesjensen/pen/dyVdNej">Input</a> - All
+            <a href="https://codepen.io/Tweagan11/pen/MWBRbZm">Input</a> - All
             the elements for receiving user input
           </li>
           <li>
-            <a href="https://codepen.io/leesjensen/pen/OJEwgBa">Media</a> - All
+            <a href="https://codepen.io/Tweagan11/pen/QWBPGeG">Media</a> - All
             the elements for rendering media objects
           </li>
         </ul>
