Added new pages and styling to website

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
     <main>
       <section>
-        <h2>About me</h2>
+        <h2>About me</a></h2>
         <p>
           Hi! My name is Myles Barney and I am excited that you are here!  I am a student at BYU studying 
 		  computer science and global business.  My dream is to leave a lasting impact on the world through
@@ -34,7 +34,7 @@
         </p>
       </section>
       <section>
-        <h2>OneGlobe</h2>
+        <h2><a href="home.html">OneGlobe</a></h2>
         <p>
           OneGlobe is a mechanism for real social change all over the world.
         </p>
@@ -42,8 +42,9 @@
       <section>
         <h2>Simon project</h2>
         <p>
-          This is where the description and link to my implementation of the
-          Simon will go.
+          This is the the link to my beginning simon project.
+          <br/>
+          <a href="https://simon.oneglobe.click">Simon</a>
         </p>
       </section>
       <section>
