Added CSS elements

--- a/index.html
+++ b/index.html
@@ -69,6 +69,15 @@
           </li>
         </ul>
       </section>
+      <section>
+        <h3>CSS</h3>
+        <ul>
+          <li>
+            <a href="https://codepen.io/myl15/pen/Exexaep">Animation</a>
+            - A simple CSS animation
+          </li>
+        </ul>
+      </section>
     </main>
   </body>
 </html>
