Revert "restored to default"
This reverts commit ff41c1c3e5e73c6d908b1b281f5b2c625087a55e.

--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  -->
     <!-- This is a placeholder for when you start using CSS -->
-    <!--
     <link rel="stylesheet" href="index.css" />
     <title>Template</title>
   </head>
@@ -19,28 +17,25 @@
       <section>
         <h2>About me</h2>
         <p>
-          My name is Rees Berrett, I'm 18 and I'm a freshman at 
-          <a href = "https://byu.edu">BYU</a>
-          . I'm currently studying in Computer Science and I really enjoy programming 
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat. Duis aute irure dolor in
+          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+          culpa qui officia deserunt mollit anim id est laborum.
         </p>
-        <h3>Hobbies</h3>
         <p>
-          I have quite a few hobbies, including:
-          <ul>
-            <li>
-              I enjoy soccer. When I was younger, I was a forward on my team, but I also like watching soccer and most other sports.
-              I'm a big fan of the Jazz!
-            </li>
-            <li>
-              After I stopped playing soccer, I started playing Ultimate Frisbee and I was hooked!
-              My high school team have been state champions many times and we even one a state championship in Idaho!
-              I even got accepted to the one of the state all-star youth teams where we got third place in a natinal championship
-            </li>
-            <li>
-              In my spare time, I sometimes build simple video games. The end result is quite fun, but writing code for them can 
-              be quite frustrating
-            </li>
-          </ul>
+          Cursus sit amet dictum sit amet justo donec enim. Volutpat blandit
+          aliquam etiam erat velit scelerisque. Vestibulum lorem sed risus
+          ultricies tristique nulla. Amet mattis vulputate enim nulla aliquet
+          porttitor. Tellus integer feugiat scelerisque varius morbi. Et tortor
+          at risus viverra adipiscing at in. Pellentesque habitant morbi
+          tristique senectus et. Donec ac odio tempor orci. At ultrices mi
+          tempus imperdiet nulla malesuada. Pellentesque pulvinar pellentesque
+          habitant morbi tristique senectus. Libero justo laoreet sit amet
+          cursus sit amet. Aliquet lectus proin nibh nisl condimentum. Sit amet
+          massa vitae tortor condimentum lacinia quis vel.
         </p>
         <p>
           Personalize this page to what you would like. This is your chance to
@@ -83,104 +78,6 @@
           </li>
         </ul>
       </section>
-    </main>
-  </body>
-</html>
--->
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Web Programming 260</title>
-    <style>
-      * {
-        box-sizing: border-box;
-        font-family: Arial, sans-serif;
-        margin: 0;
-      }
-      main {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        height: 100vh;
-        font-size: 3vw;
-        animation: fly-in 1s ease-out;
-      }
-
-      .large {
-        display: block;
-      }
-
-      p {
-        font-size: 2em;
-        display: flex;
-        color: #666;
-      }
-
-      .course {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: center;
-      }
-
-      .courseName {
-        margin: 0.25em;
-        font-size: 3em;
-        font-weight: bold;
-        color: #111;
-      }
-      .courseNum {
-        margin: 0.25em;
-        font-size: 3em;
-        color: #da9512;
-      }
-
-      .small {
-        display: none;
-        font-size: 30vw;
-        color: #f3cf8c;
-      }
-
-      @keyframes fly-in {
-        0% {
-          transform: translateX(-200%);
-        }
-        80% {
-          transform: translateX(1%);
-        }
-        100% {
-          transform: translateX(0%);
-        }
-      }
-
-      @media (max-width: 500px) {
-        body {
-          background-color: rgb(23, 23, 23);
-        }
-        .large {
-          display: none;
-        }
-        .small {
-          display: block;
-        }
-      }
-    </style>
-  </head>
-
-  <body>
-    <main>
-      <div class="large">
-        <p>Welcome to your</p>
-        <div class="course">
-          <div class="courseName">Web<br />Programming</div>
-          <div class="courseNum">260</div>
-        </div>
-        <p id="serviceName">website</p>
-      </div>
-      <div class="small">260</div>
     </main>
   </body>
 </html>
